external-crates/move/crates/move-compiler/tests/move_2024/parser/friend_decl_qualified_struct.exp
error[E01003]: invalid modifier
  ┌─ tests/move_2024/parser/friend_decl_qualified_struct.move:3:5
  │
3 │     struct A {}
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/parser/friend_decl_qualified_struct.move:7:12
  │
7 │     friend 0x42::A::A;
  │            ^^^^^^^^^^ Unexpected module member. A module member identifier is not a valid module

